<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Colors -->
    <color name="main_background">#62FFD1</color>
    <color name="yellow">#FFFD64</color>
    <color name="disabled">#CCCCCC</color>

    <!-- App -->
    <string name="app_name">Sprinkle City</string>
    <string name="action_settings">Settings</string>
    
    <!-- HomeActivity -->
	<string name="home_screen">Welcome to Sprinke City</string>
	<string name="button_create_character">Create your character</string>
	<string name="button_login">Sign in</string>
	<string name="text_or_home">or</string>
	
	<!-- LoginActivity -->
	<string name="activity_login_name">Sign in</string>
	<string name="text_login">Start the game!</string>
	<string name="edit_password_hint">Password</string>
	<string name="button_login_final">Sign me in</string>
	<string name="text_login_return">Connection feedback</string>
	<string name="text_login_details">Details</string>
	
	<!-- CreateCharacterActivity -->
	<string name="activity_create_character_name">Create your character</string>
	<string name="text_create_character"></string>
	<string name="edit_character_name_hint">Name</string>
	<string name="image_character_human">Human character</string>
	<string name="image_character_animal">Animal character</string>
	<string name="text_rating_social">Social</string>
	<string name="text_rating_animal_friendly">Animal-friendly</string>
	<string name="text_rating_business">Business skill</string>
	<string name="image_job_baker">Baker</string>
	<string name="image_job_postman">Postman</string>
	<string name="image_job_farmer">Farmer</string>
	<string name="text_rating_signle_star">15/15</string>
	<string name="button_create_character_next">Take me to the animal character</string>
	<string name="button_create_character_avatar_next">Next!</string>
	<string name="text_rating_sleep">Sleepyness</string>
	<string name="text_rating_fitness">Fitness</string>
	<string name="text_character_password">Here you can put in your password and edit names.</string>
	<string name="edit_blank_hint"></string>
	<string name="edit_password_confirm_hint">Confirm password</string>
	<string name="edit_animal_name_hint">Pet\'s name</string>
	<string name="edit_username_hint">Your name</string>
	<string name="button_create_character_confirm_password">Log me in, please</string>
	<string name="text_animal_avatar">Choose your pet</string>
	<string name="text_human_avatar">Choose your character</string>
	<string name="text_character_name">Choose your name</string>
	<string name="text_character_job">Pick your job</string>
	<string name="text_character_traits">Select your traits</string>
	<string name="text_character_job_baker">Baker</string>	
	<string name="text_character_job_postman">Postman</string>	
	<string name="text_character_job_farmer">Farmer</string>
	<string name="text_animal_name">Select your pet\'s name</string>
	<string name="text_animal_traits">Pick traits</string>
	<string name="text_password_username">Your character\'s name:</string>
	<string name="text_password_animalname">Your pet\'s name:</string>
	<string name="text_password_passwords">Put in your password:</string>
	<string name="button_create_animal_character_next">Create your characters!</string>
	
	<!-- GameMapActivity -->
	<string name="activity_game_map">Game main</string>
	<string name="text_virtual_map_distance">distance: 0</string>
	
	<!-- GameLocationActivity -->
	<string name="text_virtual_location_accelerometer">0.0</string>	
	<string name="cupcake">cupcake</string>
	
	<!-- InventoryActivity -->
	<string name="text_item_name">item</string>
	<string name="button_inventory_exchange">Trade this item!</string>
	
</resources>
