<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_character_bottom_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/text_character_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:text="@string/text_character_password" />

    <TextView
        android:id="@+id/text_password_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password_username" />

    <EditText
        android:id="@+id/edit_character_name_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_username_hint"
        android:inputType="textCapWords"
        android:layout_marginBottom="30dip" />

    <TextView
        android:id="@+id/text_password_animalname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password_animalname" />

    <EditText
        android:id="@+id/edit_animal_name_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_animal_name_hint"
        android:inputType="textCapWords"
        android:layout_marginBottom="30dip" />

    <TextView
        android:id="@+id/text_password_passwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password_passwords" />

    <EditText
        android:id="@+id/edit_character_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_character_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_confirm_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="30dip" />

    <Button
        android:id="@+id/button_create_character_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_character_confirm_password" />

</LinearLayout>