<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login" />

    <EditText
        android:id="@+id/edit_character_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_character_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login_final" />

    <TextView
        android:id="@+id/text_login_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login_return" />

</LinearLayout>