<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_character_bottom_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/image_character_human"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:background="@drawable/character_human"
                android:contentDescription="@string/image_character_human" />

            <ImageButton
                android:id="@+id/image_character_human_1"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:background="@drawable/character_human_1"
                android:contentDescription="@string/image_character_human" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/layout_job"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <ImageButton
            android:id="@+id/image_job_baker"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/job_baker"
            android:contentDescription="@string/image_job_baker" />

        <ImageButton
            android:id="@+id/image_job_postman"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/job_postman"
            android:contentDescription="@string/image_job_postman" />

        <ImageButton
            android:id="@+id/image_job_farmer"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:background="@drawable/job_farmer"
            android:contentDescription="@string/image_job_farmer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_crating_social"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:id="@+id/text_rating_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_social" />

        <RatingBar
            android:id="@+id/rating_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rating_animal_friendly"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:id="@+id/text_rating_animal_friendly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_animal_friendly" />

        <RatingBar
            android:id="@+id/rating_animal_friendly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rating_business"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:id="@+id/text_rating_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_business" />

        <RatingBar
            android:id="@+id/rating_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rating_left_stars"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:id="@+id/text_rating_signle_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating_signle_star" />

        <RatingBar
            android:id="@+id/rating_single_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="1"
            android:rating="1.0"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="1.0" />
    </LinearLayout>

</LinearLayout>